@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+    - Add 'cid' to trace
+    - Add signatures to trace
+    - Add related() to events
+    - Now it is possible to check if events are related
+
 1.302073  2016-12-18 23:02:54-08:00 America/Los_Angeles
 
     - No changes from last trial
